# EntoMLgist

./: .env.example  .gitignore  IMPROVEMENTS.md  Makefile  README.md  pyproject.toml
examples/: training_data_queries.py
src/EntoMLgist/: database_config.py  definitions.py
src/EntoMLgist/defs/: jobs.py
src/EntoMLgist/defs/assets/nlp/: comment_extraction.py  gbif_enrichment.py  name_normalization.py
src/EntoMLgist/defs/assets/pictures/: constants.py  data_population.py  database.py  download.py  posts.py
src/EntoMLgist/defs/assets/reddit/: constants.py  data_population.py  database.py  download.py  posts.py
src/EntoMLgist/models/: database.py  reddit.py
