[project]
name = "EntoMLgist"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "bs4>=0.0.2",
    "dagster==1.11.12",
    "dagster-dg-cli>=1.11.12",
    "dagster-webserver>=1.11.12",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "gliner2>=1.2.4",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "EntoMLgist"
registry_modules = [
    "EntoMLgist.components.*",
]


